# crypto-bot

./: .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yaml  docker-compose.yml  requirements.txt  trading.ipynb
alembic/: env.py
alembic/versions/: 00e448a242e3_init_database.py
crypto-bot/: metadata.yaml  requirements.txt  setup_env.sh
crypto-bot/data_exporters/: export_forecast.py  export_model.py
crypto-bot/data_loaders/: get_coins_binance.py  get_coins_cg.py  get_latest_crypto_info.py
crypto-bot/pipelines/crypto_forecast/: metadata.yaml
crypto-bot/pipelines/store_crypto/: metadata.yaml
crypto-bot/transformers/: add_crypto_history.py  merge_coins.py  normalize.py  prepare_for_cointegration.py  select_cointegrated_columns.py
crypto-bot/utils/: __init__.py  cg_api.py
dags/: update_database.py
dags/tasks/: extract_latest_info.py  load.py
db/: init.sql  pyproject.toml  schema.py
flows/: extract_coin_info.py  update_database.py
flows/tasks/: extract_latest_info.py  load.py
jobs/: extract_coin_info.py
