[build-system]
requires = ["setuptools>=61.0", "SQLAlchemy>=1.4.48"]
build-backend = "setuptools.build_meta"

[project]
name = "db"
version = "0.0.1"
authors = [
  { name="Eduardo Leão", email="eduardotleao@gmail.com" },
]
description = "Schema for crypto bot database."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/LeaoEduardo/crypto-bot"
"Bug Tracker" = "https://github.com/LeaoEduardo/crypto-bot/issues"